--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
     <div id="sub">
     <div class="quad">
   <img src="img/about-plan.png" alt="strategy">
-  
+  <br>
   <h2>Strategy</h2>
   
   <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-
+      <br>
   <a href="">Learn More</a>
 
 </div>
@@ -60,32 +60,32 @@
   <h2>How We Work</h2>
   
   <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-
+  <br>
   <a href="">Learn More</a>
 
 </div>
   
-<div class="quad">
+<div class="quad bottom">
   <img src="img/about-office.png" alt="strategy">
   
   <h2>Places We Work</h2>
 
   <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-
+  <br>
   <a href="">Learn More</a>
 </div>
 
-<div class="quad">
+<div class="quad bottom">
   <img src="img/about-meeting.png" alt="strategy">
   
   <h2>Collaboration</h2>
   
   <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-
+  <br>
   <a href="">Learn More</a>
 </div>
  
-<div>
+<div id="text-bottom">
   <h2>Let's Work Together</h2>
 
   <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
